# manager_cards

./: pyproject.toml  requirements.txt
core/: settings.py  urls.py
manager_card/: admin.py  apps.py  form.py  models.py  serializers.py  urls.py  views.py
manager_card/migrations/: 0001_initial.py
manager_card/templates/manager_card/: base.html  cards_detail.html  cards_list.html  generate_cards.html
manager_card/templates/manager_card/includes/: card_status_rele.html
static/js/: card_status_rele.js  card_status_rele_list.js
